compiler/testData/cli/js/languageVersion.out
warning: language version 1.2 is deprecated and its support will be removed in a future version of Kotlin
compiler/testData/cli/js/languageVersion.kt:4:5: error: members are not allowed in annotation class
    class Nested
    ^
COMPILATION_ERROR
